--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.5.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.1"
   }
 }
