--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/nodeJsBoilerPlate
+MONGO_URI2=mongodb://localhost:27017/nodeJsBoilerPlate2
+MONGO_URI=mongodb://mongodb:27017/nodeJsBoilerPlate2
 PORT=3000
 JWT_SECRET=your_jwt_secret_key
